# deepwrap

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
deepwrap/: __init__.py  __main__.py  client.py  config.py  function_calling.py  memory.py  native_tools.py  project_intelligence.py
deepwrap/api/: __init__.py  base.py  chat_session.py  chats.py  files.py  pow.py
deepwrap/core/: __init__.py  auth.py  session_manager.py
deepwrap/interfaces/: __init__.py  api.py  cli.py
deepwrap/modules/: __init__.py  pow_asm.py
deepwrap/utils/: bearer_token_extractor.py  browser_finder.py  browser_process.py  cdp_client.py  config_store.py  dev_tools_http.py  port_finder.py
examples/: 01_basic_stream.py  02_basic_non_stream.py  03_multi_turn_chat.py  04_god_mode.py  05_no_thinking.py  06_structured_chunks.py  07_separate_thinking_and_answer.py  08_switch_model.py  09_vision.py  10_function_calling.py  11_agent.py  12_native_tools.py  13_agent_file_edit.py  14_agent_exec.py  15_background_jobs.py
tests/: test_agent_acceptance.py  test_chat_session.py  test_cli_agent_tools.py  test_cli_markdown.py  test_memory.py  test_native_tools.py  test_project_intelligence.py
