[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwrap"
version = "0.2.3"
description = "Python SDK, CLI, and local FastAPI wrapper for DeepSeek Chat."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Nika Kudukhashvili", email = "nikakuduxashvili0@gmail.com" }
]

maintainers = [
    { name = "Nika Kudukhashvili", email = "nikakuduxashvili0@gmail.com" }
]

keywords = [
    "deepseek",
    "chat",
    "ai",
    "sdk",
    "cli",
    "fastapi",
    "wrapper",
    "streaming",
    "llm"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "wasmtime>=20.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0"
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

lint = [
    "ruff>=0.5.0",
    "mypy>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/Kuduxaaa/deepwrap"
Repository = "https://github.com/Kuduxaaa/deepwrap"
Issues = "https://github.com/Kuduxaaa/deepwrap/issues"
Documentation = "https://github.com/Kuduxaaa/deepwrap#readme"

[project.scripts]
deepwrap = "deepwrap.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepwrap*"]

[tool.setuptools.package-data]
deepwrap = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["deepwrap"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
